# parkme-unilidar

./: .env  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
classifier/: main.py  requirements.txt
configs/: emulation.yaml  replay.yaml  replay2.yaml  testbed.yaml
data_files/: capture_001_pan83.0_tilt170.0.npy  capture_002_pan79.0_tilt170.0.npy
grafana/dashboards/: sni5gect.json
include/: config.h  consumer.h  emulation_producer.h  logger.h  unitree_lidar_utilities.h
lidar/: CMakeLists.txt  Dockerfile  LICENSE  README.md
lidar/examples/: set_to_udp_mode.cpp
lidar/include/: config.h  consumer.h  emulation_producer.h  example.h  npy_producer.h  producer.h  udp_producer.h
lidar/src/: consumer.cpp  emulation_producer.cpp  main.cpp  npy_producer.cpp  producer.cpp  udp_producer.cpp
renderer/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
renderer/src/: main.js  worker.js
src/: consumer.cpp  emulation_producer.cpp  logger.cpp  main.cpp
